# llm-text-to-query

./: .env  .env.example  .gitignore  Makefile  README.md  compose.amd.yml  compose.nvidia.yml  compose.yml  config.yaml  docker-compose.yml
app/: .dockerignore  Dockerfile  database_config.py  main.py  ollama-entrypoint.sh  orchestrator-entrypoint.sh  pull-models.sh  pyproject.toml  requirements.txt  schema_helper.py
app/.streamlit/: config.toml
app/src/benchmark/: data_loader.py  llm_benchmark.py  orchestrator.py  pipeline.py  reporting.py  similarity.py  validation.py
app/src/cli/: __init__.py  repl.py
app/src/core/: __init__.py  config.py  database_config.py  llm_service.py  main.py  query_executor.py  schema_helper.py  ui.py
app/src/database/: executor.py  schema.py
app/src/llm/: __init__.py  prompts.py  service.py
app/src/text2query/: __init__.py
app/src/text2query/benchmark/: __init__.py  benchmarking.py  data_loader.py  llm_benchmark.py  orchestrator.py  pipeline.py  reporting.py  runner.py  similarity.py  validation.py
app/src/text2query/cli/: frontdesk.py  repl.py  style.py
app/src/text2query/core/: config.py
app/src/text2query/database/: executor.py  schema.py
app/src/text2query/llm/: prompts.py  service.py
app/tests/: test_frontdesk.py  test_multi_seed.py  test_pipeline_helpers.py  test_repl.py  test_reporting.py  test_similarity.py  test_sql_extraction.py  test_validation.py
benchmark/.tpch/: README.md  indexes.sql  pyproject.toml  schema.sql
benchmark/.tpch/queries/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  20.sql  21.sql  22.sql
benchmark/.tpch/questions/: 01.md  02.md  03.md  04.md  05.md  06.md  (+16 more)
db/: clickhouse_example.sql  init.sql  neo4j_example.cypher  sqlserver_example.sql
db/examples/: mariadb_example.sql  mongodb_example.js  mysql_example.sql  sqlite_example.sql
db/init/: 00-create-minidb.sh  01-mini-schema.sql  02-mini-data.sql
db/tpch/: Version.txt
